[gd_scene load_steps=28 format=2]

[ext_resource path="res://prefab/audio-icon.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sounds/menu/pop.wav" type="AudioStream" id=3]
[ext_resource path="res://prefab/fullscreen_icon.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/level_select_part_2.gd" type="Script" id=5]
[ext_resource path="res://images/interface/items/toilletpaper.png" type="Texture" id=6]
[ext_resource path="res://prefab/level_select.tscn" type="PackedScene" id=7]
[ext_resource path="res://images/menu/level-select-2/star-icon.png" type="Texture" id=8]
[ext_resource path="res://fonts/Arial Unicode.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://images/interface/items/drugs.png" type="Texture" id=10]
[ext_resource path="res://images/interface/angryemoji.png" type="Texture" id=11]
[ext_resource path="res://images/interface/items/pasta.png" type="Texture" id=12]
[ext_resource path="res://images/menu/level-select-2/moon.png" type="Texture" id=13]
[ext_resource path="res://images/menu/level-select-2/buttons/blue_button06.png" type="Texture" id=14]
[ext_resource path="res://images/goals/home.png" type="Texture" id=15]
[ext_resource path="res://images/interface/items/duck.png" type="Texture" id=16]
[ext_resource path="res://images/interface/items/baguette.png" type="Texture" id=17]
[ext_resource path="res://images/interface/running-small.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 53
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
extra_spacing_bottom = -4
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 250
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false
shadow_size = 12

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[node name="level_select" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 106.0
margin_top = 58.0
margin_right = 594.0
margin_bottom = 366.0
rect_scale = Vector2( 1.70336, 1.54336 )
color = Color( 0.246094, 0.194761, 0.194761, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 100.869
margin_top = 37.5962
margin_right = 582.869
margin_bottom = 354.596
rect_scale = Vector2( 1.70336, 1.46336 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio" type="Node2D" parent="."]
position = Vector2( 763.347, 296.825 )
rotation = -0.00773652
scale = Vector2( 0.306909, 0.311166 )

[node name="pop" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 3 )
volume_db = 10.0
bus = "sound_effects"

[node name="icon_settings" type="Node2D" parent="."]

[node name="fullscreen_icon" parent="icon_settings" instance=ExtResource( 4 )]

[node name="audio-icon" parent="icon_settings" instance=ExtResource( 1 )]
scale = Vector2( 1, 1.00358 )

[node name="title" type="RichTextLabel" parent="."]
margin_left = 351.006
margin_top = 60.251
margin_right = 670.006
margin_bottom = 110.251
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center] LEVEL SELECT"
text = " LEVEL SELECT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="RichTextLabel" parent="."]
margin_left = 161.0
margin_top = 517.0
margin_right = 482.0
margin_bottom = 582.0
custom_fonts/normal_font = SubResource( 2 )
text = "<<<BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="back"]
margin_right = 214.0
margin_bottom = 49.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="groceries" type="Node2D" parent="."]
visible = false
position = Vector2( -10.0535, 0 )

[node name="level_help" type="Node2D" parent="groceries"]
visible = false
position = Vector2( 319.425, 232.484 )

[node name="ColorRect2" type="ColorRect" parent="groceries/level_help"]
margin_left = -58.5554
margin_top = -73.2845
margin_right = 98.4446
margin_bottom = 70.7155
color = Color( 0.858824, 0.858824, 0.858824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="groceries/level_help"]
margin_left = -71.6956
margin_top = -88.7017
margin_right = 63.3049
margin_bottom = 33.2986
rect_scale = Vector2( 1.21244, 1.26561 )
texture = ExtResource( 14 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tittle" type="RichTextLabel" parent="groceries/level_help"]
margin_left = -68.0
margin_top = -80.0
margin_right = 89.0
margin_bottom = -31.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center] How to 
play"
text = " How to 
play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="\?2" type="RichTextLabel" parent="groceries/level_help"]
margin_left = -20.0
margin_top = -44.0
margin_right = 218.0
margin_bottom = 199.0
rect_scale = Vector2( 0.394825, 0.394825 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
bbcode_text = "?"
text = "?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="groceries/level_help"]
margin_left = -69.0
margin_top = -87.0
margin_right = 89.0
margin_bottom = 58.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="daily_bread" parent="groceries" instance=ExtResource( 7 )]
position = Vector2( 201.277, 234.282 )

[node name="baguette2" type="Sprite" parent="groceries/daily_bread"]
position = Vector2( 7.81836, -15.6677 )
scale = Vector2( 0.242295, 0.244508 )
texture = ExtResource( 17 )

[node name="doliprane" parent="groceries" instance=ExtResource( 7 )]
position = Vector2( 399.913, 234.282 )

[node name="drugs2" type="Sprite" parent="groceries/doliprane"]
position = Vector2( 5.63623, -16.6433 )
scale = Vector2( 0.0760416, 0.0760416 )
texture = ExtResource( 10 )

[node name="hidden_pasta" parent="groceries" instance=ExtResource( 7 )]
position = Vector2( 610.276, 235.037 )

[node name="pasta" type="Sprite" parent="groceries/hidden_pasta"]
position = Vector2( 9.01709, -16.8113 )
scale = Vector2( 0.206087, 0.204604 )
texture = ExtResource( 12 )

[node name="toilet_paper" parent="groceries" instance=ExtResource( 7 )]
position = Vector2( 811.428, 234.867 )

[node name="toilletpaper" type="Sprite" parent="groceries/toilet_paper"]
position = Vector2( 10.9331, -12.7955 )
scale = Vector2( 0.330337, 0.330337 )
texture = ExtResource( 6 )

[node name="night_pharma" parent="groceries" instance=ExtResource( 7 )]
position = Vector2( 204.84, 417.652 )

[node name="star-icon" type="Sprite" parent="groceries/night_pharma"]
position = Vector2( -38.3004, -17.0205 )
rotation = -0.630308
scale = Vector2( 0.0453991, 0.0453991 )
texture = ExtResource( 8 )

[node name="star-icon2" type="Sprite" parent="groceries/night_pharma"]
position = Vector2( 65.5742, -5.07812 )
scale = Vector2( 0.0561392, 0.0561392 )
texture = ExtResource( 8 )

[node name="star-icon3" type="Sprite" parent="groceries/night_pharma"]
position = Vector2( 50.5615, -34.2432 )
rotation = 0.480612
scale = Vector2( 0.0418852, 0.0418852 )
texture = ExtResource( 8 )

[node name="moon" type="Sprite" parent="groceries/night_pharma"]
position = Vector2( 9.87622, -16.5278 )
scale = Vector2( 0.259379, 0.259379 )
texture = ExtResource( 13 )

[node name="full_cart_1" parent="groceries" instance=ExtResource( 7 )]
position = Vector2( 402.21, 417.68 )

[node name="angryemoji6" type="Sprite" parent="groceries/full_cart_1"]
position = Vector2( 5.18079, -16.2119 )
scale = Vector2( 0.20256, 0.20256 )
texture = ExtResource( 11 )

[node name="full_cart_2" parent="groceries" instance=ExtResource( 7 )]
position = Vector2( 608.675, 419.26 )

[node name="angryemoji5" type="Sprite" parent="groceries/full_cart_2"]
position = Vector2( -9.84644, -16.2119 )
scale = Vector2( 0.20256, 0.20256 )
texture = ExtResource( 11 )

[node name="angryemoji4" type="Sprite" parent="groceries/full_cart_2"]
position = Vector2( 30.5806, -16.8198 )
scale = Vector2( 0.20256, 0.20256 )
texture = ExtResource( 11 )

[node name="full_cart_3" parent="groceries" instance=ExtResource( 7 )]
position = Vector2( 811.021, 419.771 )

[node name="angryemoji" type="Sprite" parent="groceries/full_cart_3"]
position = Vector2( -26.8183, -16.2119 )
scale = Vector2( 0.20256, 0.20256 )
texture = ExtResource( 11 )

[node name="angryemoji2" type="Sprite" parent="groceries/full_cart_3"]
position = Vector2( 13.981, -16.2119 )
scale = Vector2( 0.20256, 0.20256 )
texture = ExtResource( 11 )

[node name="angryemoji3" type="Sprite" parent="groceries/full_cart_3"]
position = Vector2( 54.2017, -16.2119 )
scale = Vector2( 0.20256, 0.20256 )
texture = ExtResource( 11 )

[node name="sport" type="Node2D" parent="."]

[node name="level_help" type="Node2D" parent="sport"]
visible = false
position = Vector2( 319.425, 232.484 )

[node name="ColorRect2" type="ColorRect" parent="sport/level_help"]
margin_left = -58.5554
margin_top = -73.2845
margin_right = 98.4446
margin_bottom = 70.7155
color = Color( 0.858824, 0.858824, 0.858824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="sport/level_help"]
margin_left = -71.6956
margin_top = -88.7017
margin_right = 63.3049
margin_bottom = 33.2986
rect_scale = Vector2( 1.21244, 1.26561 )
texture = ExtResource( 14 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tittle" type="RichTextLabel" parent="sport/level_help"]
margin_left = -68.0
margin_top = -80.0
margin_right = 89.0
margin_bottom = -31.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center] How to 
play"
text = " How to 
play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="\?2" type="RichTextLabel" parent="sport/level_help"]
margin_left = -20.0
margin_top = -44.0
margin_right = 218.0
margin_bottom = 199.0
rect_scale = Vector2( 0.394825, 0.394825 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
bbcode_text = "?"
text = "?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="sport/level_help"]
margin_left = -69.0
margin_top = -87.0
margin_right = 89.0
margin_bottom = 58.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="near_home" parent="sport" instance=ExtResource( 7 )]
position = Vector2( 189.245, 233.607 )

[node name="home" type="Sprite" parent="sport/near_home"]
position = Vector2( 10.0476, -20.7438 )
scale = Vector2( 0.129568, 0.129568 )
texture = ExtResource( 15 )

[node name="jogging_1" parent="sport" instance=ExtResource( 7 )]
position = Vector2( 382.781, 235.982 )

[node name="running-small3" type="Sprite" parent="sport/jogging_1"]
position = Vector2( 5.44214, -13.8471 )
scale = Vector2( 0.360418, 0.360418 )
texture = ExtResource( 18 )

[node name="jogging_2" parent="sport" instance=ExtResource( 7 )]
position = Vector2( 590.878, 402.28 )

[node name="running-small2" type="Sprite" parent="sport/jogging_2"]
position = Vector2( 12.3488, -13.0253 )
scale = Vector2( 0.360418, 0.360418 )
texture = ExtResource( 18 )

[node name="canal_1" parent="sport" instance=ExtResource( 7 )]
position = Vector2( 588.611, 236.685 )

[node name="duck" type="Sprite" parent="sport/canal_1"]
position = Vector2( 7.04785, -13.2072 )
scale = Vector2( 0.122441, 0.122441 )
texture = ExtResource( 16 )

[node name="canal_2" parent="sport" instance=ExtResource( 7 )]
position = Vector2( 193.661, 403.414 )

[node name="duck2" type="Sprite" parent="sport/canal_2"]
position = Vector2( 0.93396, -14.657 )
scale = Vector2( 0.12106, 0.12106 )
texture = ExtResource( 16 )

[node name="marathon_5k" parent="sport" instance=ExtResource( 7 )]
position = Vector2( 788.636, 237.857 )

[node name="running-small" type="Sprite" parent="sport/marathon_5k"]
position = Vector2( 6.59082, -15.7218 )
scale = Vector2( 0.360418, 0.360418 )
texture = ExtResource( 18 )

[node name="marathon_21k" parent="sport" instance=ExtResource( 7 )]
position = Vector2( 387.16, 401.714 )

[node name="running-small2" type="Sprite" parent="sport/marathon_21k"]
position = Vector2( 0.12439, -13.8669 )
scale = Vector2( 0.360418, 0.360418 )
texture = ExtResource( 18 )

[node name="marathon_42k" parent="sport" instance=ExtResource( 7 )]
position = Vector2( 790.805, 403.98 )

[node name="running-small3" type="Sprite" parent="sport/marathon_42k"]
position = Vector2( 4.42175, -13.7864 )
scale = Vector2( 0.360418, 0.360418 )
texture = ExtResource( 18 )
[connection signal="button_down" from="back/Button" to="." method="_on_back_button_down"]
[connection signal="button_down" from="groceries/level_help/Button" to="." method="_on_help_button_down"]
[connection signal="button_down" from="sport/level_help/Button" to="." method="_on_help_button_down"]
